--- a/src/app/components/skills/damage-skill/damage-skill.component.html
+++ b/src/app/components/skills/damage-skill/damage-skill.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="selectedSkilltree$ | async as skilltree">
-  <sat-popover #damagePopover xAlign="after" yAlign="center" hasBackdrop>
+  <sat-popover #damagePopover xAlign="after" yAlign="center" hasBackdrop backdropClass="cdk-overlay-dark-backdrop">
     <mat-card>
       <mat-card-content>
         <mat-card-content [innerHTML]="'COMPONENTS__SKILLS__DAMAGE__DAMAGE_POPUP' | translate"></mat-card-content>
