--- a/src/app/components/skills/heal-skill/heal-skill.component.html
+++ b/src/app/components/skills/heal-skill/heal-skill.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="selectedSkilltree$ | async as skilltree">
-  <sat-popover #timerPopover xAlign="after" yAlign="center" hasBackdrop>
+  <sat-popover #timerPopover xAlign="after" yAlign="center" hasBackdrop backdropClass="cdk-overlay-dark-backdrop">
     <mat-card>
       <mat-card-content>
         <mat-card-content [innerHTML]="'COMPONENTS__SKILLS__HEAL__TIMER_SECONDS_POPUP' | translate"></mat-card-content>
       </mat-card-content>
     </mat-card>
   </sat-popover>
-  <sat-popover #healthPopover xAlign="after" yAlign="center" hasBackdrop>
+  <sat-popover #healthPopover xAlign="after" yAlign="center" hasBackdrop backdropClass="cdk-overlay-dark-backdrop">
     <mat-card>
       <mat-card-content>
         <mat-card-content [innerHTML]="'COMPONENTS__SKILLS__HEAL__HEALTH_POPUP' | translate"></mat-card-content>
