--- a/src/app/components/skills/ranged-skill/ranged-skill.component.html
+++ b/src/app/components/skills/ranged-skill/ranged-skill.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="selectedSkilltree$ | async as skilltree">
-  <sat-popover #rangePopover xAlign="after" yAlign="center" hasBackdrop>
+  <sat-popover #rangePopover xAlign="after" yAlign="center" hasBackdrop backdropClass="cdk-overlay-dark-backdrop">
     <mat-card>
       <mat-card-content>
         <mat-card-content [innerHTML]="'COMPONENTS__SKILLS__RANGED__RANGE_POPUP' | translate"></mat-card-content>
       </mat-card-content>
     </mat-card>
   </sat-popover>
-  <sat-popover #ratePopover xAlign="after" yAlign="center" hasBackdrop>
+  <sat-popover #ratePopover xAlign="after" yAlign="center" hasBackdrop backdropClass="cdk-overlay-dark-backdrop">
     <mat-card>
       <mat-card-content>
         <mat-card-content [innerHTML]="'COMPONENTS__SKILLS__RANGED__RATE_POPUP' | translate"></mat-card-content>
