--- a/src/app/components/skills/wither-skill/wither-skill.component.html
+++ b/src/app/components/skills/wither-skill/wither-skill.component.html
@@ -1,12 +1,12 @@
 <div *ngIf="selectedSkilltree$ | async as skilltree">
-  <sat-popover #chancePopover xAlign="after" yAlign="center" hasBackdrop>
+  <sat-popover #chancePopover xAlign="after" yAlign="center" hasBackdrop backdropClass="cdk-overlay-dark-backdrop">
     <mat-card>
       <mat-card-content>
         <mat-card-content [innerHTML]="'COMPONENTS__SKILLS__WITHER__CHANCE_POPUP' | translate"></mat-card-content>
       </mat-card-content>
     </mat-card>
   </sat-popover>
-  <sat-popover #durationPopover xAlign="after" yAlign="center" hasBackdrop>
+  <sat-popover #durationPopover xAlign="after" yAlign="center" hasBackdrop backdropClass="cdk-overlay-dark-backdrop">
     <mat-card>
       <mat-card-content>
         <mat-card-content [innerHTML]="'COMPONENTS__SKILLS__WITHER__DURATION_POPUP' | translate"></mat-card-content>
