--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -16,7 +16,7 @@
           <mat-input-container>
             <span matPrefix>{{ 'COMPONENTS__SKILLS__BACKPACK__ROWS_PREFIX' | translate }}</span>
             <input matInput [placeholder]="'COMPONENTS__SKILLS__BACKPACK__ROWS' | translate" [value]="upgrade.rows ? upgrade.rows : 0" type="text"
-                   pattern="[+-=][0-9]+"
+                   pattern="[+-][0-9]+"
                    (blur)="update(skilltree, upgrade, 'rows', $event.srcElement.value)">
             <span matSuffix>{{ 'COMPONENTS__SKILLS__BACKPACK__ROWS_SUFFIX' | translate }}</span>
           </mat-input-container>
