--- a/src/app/components/skills/damage-skill/damage-skill.component.html
+++ b/src/app/components/skills/damage-skill/damage-skill.component.html
@@ -17,7 +17,7 @@
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__DAMAGE__DAMAGE_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__DAMAGE__DAMAGE' | translate"
-                 [value]="upgrade.damage" type="text" pattern="[+-=][0-9]+(\.[0-9]+)?"
+                 [value]="upgrade.damage" type="text" pattern="[+-][0-9]+(\.[0-9]+)?"
                  (blur)="update(skilltree, upgrade, 'damage', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__DAMAGE__DAMAGE_SUFFIX' | translate }}</span>
         </mat-input-container>
