--- a/src/app/components/skills/life-skill/life-skill.component.html
+++ b/src/app/components/skills/life-skill/life-skill.component.html
@@ -18,7 +18,7 @@
           <span matPrefix>{{ 'COMPONENTS__SKILLS__LIFE_HEALTH_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__LIFE_HEALTH' | translate"
                  [value]="upgrade.health ? upgrade.health : 0"
-                 type="text" pattern="[+-=][0-9]+(\.[0-9]+)?"
+                 type="text" pattern="[+-][0-9]+(\.[0-9]+)?"
                  (blur)="update(skilltree, upgrade, 'health', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__LIFE_HEALTH_SUFFIX' | translate }}</span>
         </mat-input-container>
