--- a/src/app/components/skills/slow-skill/slow-skill.component.html
+++ b/src/app/components/skills/slow-skill/slow-skill.component.html
@@ -25,7 +25,7 @@
           <span matPrefix>{{ 'COMPONENTS__SKILLS__SLOW__CHANCE_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__SLOW__CHANCE' | translate"
                  [value]="upgrade.chance ? upgrade.chance : 0" type="text"
-                 pattern="[+-=](?:[0-9]|[1-9][0-9]|100)"
+                 pattern="[+-](?:[0-9]|[1-9][0-9]|100)"
                  (blur)="update(skilltree, upgrade, 'chance', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__SLOW__CHANCE_SUFFIX' | translate }}</span>
         </mat-input-container>
@@ -38,7 +38,7 @@
           <span matPrefix>{{ 'COMPONENTS__SKILLS__SLOW__DURATION_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__SLOW__DURATION' | translate"
                  [value]="upgrade.duration ? upgrade.duration : 0" type="text"
-                 pattern="[+-=][0-9]+"
+                 pattern="[+-][0-9]+"
                  (blur)="update(skilltree, upgrade, 'duration', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__SLOW__DURATION_SUFFIX' | translate }}</span>
         </mat-input-container>
