--- a/src/app/components/skills/stomp-skill/stomp-skill.component.html
+++ b/src/app/components/skills/stomp-skill/stomp-skill.component.html
@@ -25,7 +25,7 @@
           <span matPrefix>{{ 'COMPONENTS__SKILLS__STOMP__CHANCE_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__STOMP__CHANCE' | translate"
                  [value]="upgrade.chance ? upgrade.chance : 0" type="text"
-                 pattern="[+-=](?:[0-9]|[1-9][0-9]|100)"
+                 pattern="[+-](?:[0-9]|[1-9][0-9]|100)"
                  (blur)="update(skilltree, upgrade, 'chance', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__STOMP__CHANCE_SUFFIX' | translate }}</span>
         </mat-input-container>
@@ -38,7 +38,7 @@
           <span matPrefix>{{ 'COMPONENTS__SKILLS__STOMP__DAMAGE_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__STOMP__DAMAGE' | translate"
                  [value]="upgrade.damage ? upgrade.damage : 0"
-                 type="text" pattern="[+-=][0-9]+(\.[0-9]+)?"
+                 type="text" pattern="[+-][0-9]+(\.[0-9]+)?"
                  (blur)="update(skilltree, upgrade, 'damage', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__STOMP__DAMAGE_SUFFIX' | translate }}</span>
         </mat-input-container>
