--- a/src/app/components/skills/shield-skill/shield-skill.component.html
+++ b/src/app/components/skills/shield-skill/shield-skill.component.html
@@ -24,7 +24,7 @@
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__SHIELD__CHANCE_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__SHIELD__CHANCE' | translate"
-                 [value]="upgrade.chance ? upgrade.chance : 0" type="text"
+                 [value]="upgrade.chance ? upgrade.chance : '+0'" type="text"
                  pattern="[+-](?:[0-9]|[1-9][0-9]|100)"
                  (blur)="update(skilltree, upgrade, 'chance', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__SHIELD__CHANCE_SUFFIX' | translate }}</span>
@@ -37,7 +37,7 @@
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__SHIELD__REDIRECTED_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__SHIELD__REDIRECTED' | translate"
-                 [value]="upgrade.reflection ? upgrade.reflection : 0" type="text"
+                 [value]="upgrade.reflection ? upgrade.reflection : '+0'" type="text"
                  pattern="[+-][0-9]+(\.[0-9]+)?"
                  (blur)="update(skilltree, upgrade, 'reflection', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__SHIELD__REDIRECTED_SUFFIX' | translate }}</span>
