--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -15,7 +15,8 @@
         <mat-card>
           <mat-input-container>
             <span matPrefix>{{ 'COMPONENTS__SKILLS__BACKPACK__ROWS_PREFIX' | translate }}</span>
-            <input matInput [placeholder]="'COMPONENTS__SKILLS__BACKPACK__ROWS' | translate" [value]="upgrade.rows ? upgrade.rows : 0" type="text"
+            <input matInput [placeholder]="'COMPONENTS__SKILLS__BACKPACK__ROWS' | translate"
+                   [value]="upgrade.rows ? upgrade.rows : '+0'" type="text"
                    pattern="[+-][0-9]+"
                    (blur)="update(skilltree, upgrade, 'rows', $event.srcElement.value)">
             <span matSuffix>{{ 'COMPONENTS__SKILLS__BACKPACK__ROWS_SUFFIX' | translate }}</span>
