--- a/src/app/components/skills/beacon-skill/beacon-skill.component.html
+++ b/src/app/components/skills/beacon-skill/beacon-skill.component.html
@@ -32,7 +32,7 @@
           <mat-input-container>
             <span matPrefix>{{ 'COMPONENTS__SKILLS__BEACON__RANGE_PREFIX' | translate }}</span>
             <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__RANGE' | translate"
-                   [value]="upgrade.range ? upgrade.range : 0" type="text"
+                   [value]="upgrade.range ? upgrade.range : '+0'" type="text"
                    pattern="[+-][0-9]+(\.[0-9]+)?"
                    (blur)="update(skilltree, upgrade, 'range', $event.srcElement.value)">
             <span matSuffix>{{ 'COMPONENTS__SKILLS__BEACON__RANGE_SUFFIX' | translate }}</span>
@@ -45,7 +45,7 @@
           <mat-input-container>
             <span matPrefix>{{ 'COMPONENTS__SKILLS__BEACON__DURATION_PREFIX' | translate }}</span>
             <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__DURATION' | translate"
-                   [value]="upgrade.duration ? upgrade.duration : 0" type="text"
+                   [value]="upgrade.duration ? upgrade.duration : '+0'" type="text"
                    pattern="[+-][0-9]+"
                    (blur)="update(skilltree, upgrade, 'duration', $event.srcElement.value)">
             <span matSuffix>{{ 'COMPONENTS__SKILLS__BEACON__DURATION_SUFFIX' | translate }}</span>
@@ -58,7 +58,7 @@
           <mat-input-container>
             <span matPrefix>{{ 'COMPONENTS__SKILLS__BEACON__NUMBER_PREFIX' | translate }}</span>
             <input matInput [placeholder]="'COMPONENTS__SKILLS__BEACON__NUMBER' | translate"
-                   [value]="upgrade.count ? upgrade.count : 0" type="text"
+                   [value]="upgrade.count ? upgrade.count : '+0'" type="text"
                    pattern="[+-][0-9]+(\.[0-9]+)?"
                    (blur)="update(skilltree, upgrade, 'count', $event.srcElement.value)">
             <span matSuffix>{{ 'COMPONENTS__SKILLS__BEACON__NUMBER_SUFFIX' | translate }}</span>
