--- a/src/app/components/skills/knockback-skill/knockback-skill.component.html
+++ b/src/app/components/skills/knockback-skill/knockback-skill.component.html
@@ -17,7 +17,7 @@
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__KNOCKBACK__CHANCE_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__KNOCKBACK__CHANCE' | translate"
-                 [value]="upgrade.chance ? upgrade.chance : 0" type="text"
+                 [value]="upgrade.chance ? upgrade.chance : '+0'" type="text"
                  pattern="[+-](?:[0-9]|[1-9][0-9]|100)"
                  (blur)="update(skilltree, upgrade, 'chance', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__KNOCKBACK__CHANCE_SUFFIX' | translate }}</span>
