--- a/src/app/components/skills/pickup-skill/pickup-skill.component.html
+++ b/src/app/components/skills/pickup-skill/pickup-skill.component.html
@@ -17,7 +17,7 @@
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__PICKUP__RANGE_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__PICKUP__RANGE' | translate"
-                 [value]="upgrade.range ? upgrade.range : 0" type="text"
+                 [value]="upgrade.range ? upgrade.range : '+0'" type="text"
                  pattern="[+-][0-9]+(\.[0-9]+)?"
                  (blur)="update(skilltree, upgrade, 'range', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__PICKUP__RANGE_SUFFIX' | translate }}</span>
