--- a/src/app/components/skills/ride-skill/ride-skill.component.html
+++ b/src/app/components/skills/ride-skill/ride-skill.component.html
@@ -39,7 +39,7 @@
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__RIDE__SPEED_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__RIDE__SPEED' | translate"
-                 [value]="upgrade.speed ? upgrade.speed : 0" type="text"
+                 [value]="upgrade.speed ? upgrade.speed : '+0'" type="text"
                  pattern="[+-][0-9]+(\.[0-9]+)?"
                  (blur)="update(skilltree, upgrade, 'speed', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__RIDE__SPEED_SUFFIX' | translate }}</span>
