--- a/src/app/components/skills/stomp-skill/stomp-skill.component.html
+++ b/src/app/components/skills/stomp-skill/stomp-skill.component.html
@@ -24,7 +24,7 @@
         <mat-input-container>
           <span matPrefix>{{ 'COMPONENTS__SKILLS__STOMP__CHANCE_PREFIX' | translate }}</span>
           <input matInput [placeholder]="'COMPONENTS__SKILLS__STOMP__CHANCE' | translate"
-                 [value]="upgrade.chance ? upgrade.chance : 0" type="text"
+                 [value]="upgrade.chance ? upgrade.chance : '+0'" type="text"
                  pattern="[+-](?:[0-9]|[1-9][0-9]|100)"
                  (blur)="update(skilltree, upgrade, 'chance', $event.srcElement.value)">
           <span matSuffix>{{ 'COMPONENTS__SKILLS__STOMP__CHANCE_SUFFIX' | translate }}</span>
